--- a/Spring/cervejaria-batch-tasklet/src/main/resources/application.yaml
+++ b/Spring/cervejaria-batch-tasklet/src/main/resources/application.yaml
@@ -1,7 +1,8 @@
 spring:
   datasource:
-    url: jdbc:h2:D:\nonatorw\fiap-35scj-cervejaria-batch-tasklet\db\fiapcervejariabatch;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:D:\nonatorw\db\fiapcervejariabatch;DB_CLOSE_ON_EXIT=FALSE
     username: fiap
     password: fiap
-file:
-  path: D:\nonatorw\Spring\Spring.7z
+file  :
+  path : D:\nonatorw\Spring\Spring.7z # Arquivo de leitura está no FileSystem
+  input: classpath:pessoa.txt         # Arquivo de leitura está no classpath
