--- a/Spring/cervejaria-batch-tasklet/build.gradle
+++ b/Spring/cervejaria-batch-tasklet/build.gradle
@@ -29,8 +29,8 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
-
     testImplementation 'org.springframework.batch:spring-batch-test'
+    testImplementation 'org.awaitility:awaitility:4.0.2'
 }
 
 test {
